      self control slots, netctl control slots and netctl information slots
    + add tests
* library:
    + add custom structures netctlWifiInfo and netctlProfileInfo
    + add methods getActiveProfile(), autoGetActiveProfile()
    + add slot switchToProfile()
    + add slot stopAllProfiles()
    + add slot reenableProfile()
    + add slots getRecommendedConfiguration()
    + add double quotes to profile names
    + add tests
    * rewrite to use [tasks](https://github.com/mhogomchungu/tasks) (see #7)
    * rename getInterfaceList() to getWirelessInterfaceList()
    * change temporaty directory from $HOME/.cache to system one
    - remove functions getProfileDescriptions() and getProfileStatuses()
    - remove SleepThread class
* plasmoid:
    + add 3rd party license information
    + allow plasmoid to use system tray
    + add ability to use helper
    * change all running processes to detached (see #7)
    * rewrite text label to use tags
    * update to dataengine changes
    * edit about window

***

Ver.1.2.0
---------
* all:
    + add icons
    + add support of netctl-auto
    * changes in the project architecture
    * refactoring
* dataengine:
    + add debug information (NETCTLGUI_DEBUG=yes)
* gui:
    + add support of macvlan
    + add ability to remove profile
    + add support of hidden wifi network
    + add contextual menu to tables
    + add actions menu
    + add clear() function to profileTab
    + add about window
    + more command line options
    + add workaround for wireless-wep example
    + add shell completions
    + add "Report a bug" action
    - fix possible segfaults with null arrays (#5)
    * more debug information
    * change lineEdit_profile to comboBox
    * refactoring of configuration interface
    * change setting of the interface to profile tab
    * rewrite ErrorWindow class
* library:
    + detach backend from frontend
    + add error checking
    + add doxygen documentation
    * more debug information