@@ -113,6 +113,16 @@ th.sub {
     <td>yes</td>
   </tr>
   <tr>
+    <td>bool forceStart(QString profile)</td>
+    <td>force starts the profile. Returns <code>true</code> if action has been performed successfully</td>
+    <td>yes</td>
+  </tr>
+  <tr>
+    <td>bool forceStop(QString profile)</td>
+    <td>force stops the profile. Returns <code>true</code> if action has been performed successfully</td>
+    <td>yes</td>
+  </tr>
+  <tr>
     <td>bool Reenable(QString profile)</td>
     <td>reenables the profile. Returns <code>true</code> if action has been performed successfully</td>
     <td>yes</td>
