@@ -36,6 +36,7 @@ Ver.1.3.0
     + add slot stopAllProfiles()
     + add slot reenableProfile()
     + add slots getRecommendedConfiguration()
+    + add slots forceStartProfile() and forceStopProfile()
     + add double quotes to profile names
     + add tests
     * rewrite to use [tasks](https://github.com/mhogomchungu/tasks) (see #7)
